@@ -1,5 +1,5 @@
 /*
- * Copyright 2019-2024 The Polypheny Project
+ * Copyright 2019-2025 The Polypheny Project
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -17,6 +17,8 @@
 package org.polypheny.db.processing;
 
 
+import com.fasterxml.jackson.databind.ObjectMapper;
+import com.fasterxml.jackson.databind.node.ObjectNode;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.Lists;
 import java.lang.reflect.Type;
@@ -27,13 +29,10 @@ import java.util.HashSet;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.Map.Entry;
 import java.util.Objects;
-import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
-import java.util.stream.Stream;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.lang3.time.StopWatch;
 import org.jetbrains.annotations.NotNull;
@@ -56,23 +55,23 @@ import org.polypheny.db.algebra.constant.ExplainLevel;
 import org.polypheny.db.algebra.constant.Kind;
 import org.polypheny.db.algebra.core.Sort;
 import org.polypheny.db.algebra.core.Values;
-import org.polypheny.db.algebra.core.common.BatchIterator;
-import org.polypheny.db.algebra.core.common.ConditionalExecute;
 import org.polypheny.db.algebra.core.common.ConditionalExecute.Condition;
-import org.polypheny.db.algebra.core.common.ConstraintEnforcer;
 import org.polypheny.db.algebra.core.lpg.LpgAlg;
 import org.polypheny.db.algebra.enumerable.EnumerableAlg;
 import org.polypheny.db.algebra.enumerable.EnumerableAlg.Prefer;
 import org.polypheny.db.algebra.enumerable.EnumerableCalc;
 import org.polypheny.db.algebra.enumerable.EnumerableConvention;
 import org.polypheny.db.algebra.enumerable.EnumerableInterpretable;
+import org.polypheny.db.algebra.logical.common.LogicalBatchIterator;
 import org.polypheny.db.algebra.logical.common.LogicalConditionalExecute;
+import org.polypheny.db.algebra.logical.common.LogicalConstraintEnforcer;
 import org.polypheny.db.algebra.logical.document.LogicalDocumentModify;
 import org.polypheny.db.algebra.logical.lpg.LogicalLpgModify;
 import org.polypheny.db.algebra.logical.relational.LogicalRelModify;
 import org.polypheny.db.algebra.logical.relational.LogicalRelProject;
 import org.polypheny.db.algebra.logical.relational.LogicalRelScan;
 import org.polypheny.db.algebra.logical.relational.LogicalRelValues;
+import org.polypheny.db.algebra.polyalg.PolyAlgMetadata.GlobalStats;
 import org.polypheny.db.algebra.type.AlgDataType;
 import org.polypheny.db.algebra.type.AlgDataTypeField;
 import org.polypheny.db.catalog.Catalog;
@@ -89,15 +88,14 @@ import org.polypheny.db.information.InformationCode;
 import org.polypheny.db.information.InformationGroup;
 import org.polypheny.db.information.InformationManager;
 import org.polypheny.db.information.InformationPage;
-import org.polypheny.db.information.InformationQueryPlan;
+import org.polypheny.db.information.InformationPolyAlg;
+import org.polypheny.db.information.InformationPolyAlg.PlanType;
 import org.polypheny.db.interpreter.BindableConvention;
 import org.polypheny.db.interpreter.Interpreters;
 import org.polypheny.db.monitoring.events.DmlEvent;
 import org.polypheny.db.monitoring.events.MonitoringType;
 import org.polypheny.db.monitoring.events.QueryEvent;
 import org.polypheny.db.monitoring.events.StatementEvent;
-import org.polypheny.db.partition.PartitionManagerFactory;
-import org.polypheny.db.partition.properties.PartitionProperty;
 import org.polypheny.db.plan.AlgOptCost;
 import org.polypheny.db.plan.AlgOptUtil;
 import org.polypheny.db.plan.AlgTraitSet;
@@ -162,13 +160,12 @@ public abstract class AbstractQueryProcessor implements QueryProcessor, Executio
     protected static final boolean ENABLE_STREAM = true;
     private final Statement statement;
 
-    // This map is required to allow plans with multiple physical placements of the same logical table.
-    // scanId -> tableId
-    private final Map<Long, Long> scanPerTable = new HashMap<>();
-
 
     protected AbstractQueryProcessor( Statement statement ) {
         this.statement = statement;
+        if ( !statement.getTransaction().isActive() ) {
+            throw new GenericRuntimeException( "Transaction is not active" );
+        }
     }
 
 
@@ -197,6 +194,18 @@ public abstract class AbstractQueryProcessor implements QueryProcessor, Executio
 
 
     @Override
+    public PolyImplementation prepareQuery( AlgRoot logicalRoot, boolean isRouted, boolean withMonitoring ) {
+        return prepareQuery( logicalRoot, logicalRoot.alg.getCluster().getTypeFactory().builder().build(), isRouted, false, false, withMonitoring );
+    }
+
+
+    @Override
+    public PolyImplementation prepareQuery( AlgRoot logicalRoot, boolean isRouted, boolean isPhysical, boolean withMonitoring ) {
+        return prepareQuery( logicalRoot, logicalRoot.alg.getCluster().getTypeFactory().builder().build(), isRouted, isPhysical, false, withMonitoring );
+    }
+
+
+    @Override
     public PolyImplementation prepareQuery( AlgRoot logicalRoot, AlgDataType parameterRowType, boolean withMonitoring ) {
         return prepareQuery( logicalRoot, parameterRowType, false, false, withMonitoring );
     }
@@ -204,14 +213,23 @@ public abstract class AbstractQueryProcessor implements QueryProcessor, Executio
 
     @Override
     public PolyImplementation prepareQuery( AlgRoot logicalRoot, AlgDataType parameterRowType, boolean isRouted, boolean isSubquery, boolean withMonitoring ) {
-        if ( statement.getTransaction().isAnalyze() ) {
-            attachQueryPlans( logicalRoot );
+        return prepareQuery( logicalRoot, parameterRowType, isRouted, false, isSubquery, withMonitoring );
+    }
+
+
+    @Override
+    public PolyImplementation prepareQuery( AlgRoot root, AlgDataType parameterRowType, boolean isRouted, boolean isPhysical, boolean isSubquery, boolean withMonitoring ) {
+        if ( isPhysical ) {
+            return implementPhysicalPlan( root, parameterRowType );
+        }
+        if ( !isRouted && statement.getTransaction().isAnalyze() ) {
+            attachPolyAlgPlan( root.alg );
         }
 
         if ( statement.getTransaction().isAnalyze() ) {
             statement.getOverviewDuration().start( "Processing" );
         }
-        final ProposedImplementations proposedImplementations = prepareQueries( logicalRoot, parameterRowType, isRouted, isSubquery );
+        final ProposedImplementations proposedImplementations = prepareQueries( root, parameterRowType, isRouted, isSubquery );
 
         if ( statement.getTransaction().isAnalyze() ) {
             statement.getOverviewDuration().stop( "Processing" );
@@ -232,17 +250,36 @@ public abstract class AbstractQueryProcessor implements QueryProcessor, Executio
     }
 
 
-    private void attachQueryPlans( AlgRoot logicalRoot ) {
-        InformationManager queryAnalyzer = statement.getTransaction().getQueryAnalyzer();
-        InformationPage page = new InformationPage( "Logical Query Plan" ).setLabel( "plans" );
-        page.fullWidth();
-        InformationGroup group = new InformationGroup( page, "Logical Query Plan" );
-        queryAnalyzer.addPage( page );
-        queryAnalyzer.addGroup( group );
-        InformationQueryPlan informationQueryPlan = new InformationQueryPlan(
-                group,
-                AlgOptUtil.dumpPlan( "Logical Query Plan", logicalRoot.alg, ExplainFormat.JSON, ExplainLevel.ALL_ATTRIBUTES ) );
-        queryAnalyzer.registerInformation( informationQueryPlan );
+    private void attachPolyAlgPlan( AlgNode alg ) {
+        ObjectMapper objectMapper = new ObjectMapper();
+        GlobalStats gs = GlobalStats.computeGlobalStats( alg );
+        try {
+            ObjectNode objectNode = alg.serializePolyAlgebra( objectMapper, gs );
+            String jsonString = objectMapper.writerWithDefaultPrettyPrinter().writeValueAsString( objectNode );
+
+            InformationManager queryAnalyzer = statement.getTransaction().getQueryAnalyzer();
+            InformationPage page = new InformationPage( "Logical Query Plan" ).setStmtLabel( statement.getIndex() );
+            page.fullWidth();
+            InformationGroup group = new InformationGroup( page, "Logical Query Plan" );
+            queryAnalyzer.addPage( page );
+            queryAnalyzer.addGroup( group );
+
+            InformationPolyAlg infoPolyAlg = new InformationPolyAlg( group, jsonString, PlanType.LOGICAL );
+            if ( shouldAttachTextualPolyAlg() ) {
+                // when testing, we want to access the human-readable form
+                String serialized = alg.buildPolyAlgebra( (String) null );
+                if ( serialized == null ) {
+                    throw new GenericRuntimeException( "Could not serialize PolyAlgebra" );
+                }
+                infoPolyAlg.setTextualPolyAlg( serialized );
+            }
+
+            queryAnalyzer.registerInformation( infoPolyAlg );
+
+        } catch ( Exception e ) {
+            throw new GenericRuntimeException( e.getMessage(), e );
+        }
+
     }
 
 
@@ -253,9 +290,6 @@ public abstract class AbstractQueryProcessor implements QueryProcessor, Executio
         final Convention resultConvention = ENABLE_BINDABLE ? BindableConvention.INSTANCE : EnumerableConvention.INSTANCE;
         final StopWatch stopWatch = new StopWatch();
         stopWatch.start();
-
-        // Initialize result lists. They will all be with in the same ordering.
-        List<Plan> plans = null;
 
         if ( isAnalyze ) {
             statement.getProcessingDuration().start( "Expand Views" );
@@ -297,6 +331,9 @@ public abstract class AbstractQueryProcessor implements QueryProcessor, Executio
         if ( isAnalyze ) {
             statement.getProcessingDuration().stop( "Parameter Validation" );
         }
+
+        // Initialize result lists. They will all be with in the same ordering.
+        List<Plan> plans;
 
         if ( isRouted ) {
             plans = List.of( new Plan().proposedRoutingPlan( new ProposedRoutingPlanImpl( logicalRoot, logicalQueryInformation.getQueryHash() ) ) );
@@ -351,7 +388,7 @@ public abstract class AbstractQueryProcessor implements QueryProcessor, Executio
 
             //
             // Routing
-            plans = routePlans( indexLookupRoot, logicalQueryInformation, plans, isAnalyze );
+            plans = routePlans( indexLookupRoot, logicalQueryInformation, isAnalyze );
 
             if ( isAnalyze ) {
                 statement.getRoutingDuration().start( "Flattener" );
@@ -516,8 +553,25 @@ public abstract class AbstractQueryProcessor implements QueryProcessor, Executio
     }
 
 
+    private PolyImplementation implementPhysicalPlan( AlgRoot root, AlgDataType parameterRowType ) {
+        final Convention resultConvention = ENABLE_BINDABLE ? BindableConvention.INSTANCE : EnumerableConvention.INSTANCE;
+
+        PreparedResult<PolyValue> preparedResult = implement( root, parameterRowType );
+        UiRoutingPageUtil.addPhysicalPlanPage( root.alg, statement.getTransaction().getQueryAnalyzer(), statement.getIndex(), shouldAttachTextualPolyAlg() );
+        return createPolyImplementation(
+                preparedResult,
+                root.kind,
+                root.alg,
+                root.validatedRowType,
+                resultConvention,
+                new ExecutionTimeMonitor(),
+                Objects.requireNonNull( root.alg.getTraitSet().getTrait( ModelTraitDef.INSTANCE ) ).dataModel() );
+    }
+
+
     @NotNull
-    private List<Plan> routePlans( AlgRoot indexLookupRoot, LogicalQueryInformation logicalQueryInformation, List<Plan> plans, boolean isAnalyze ) {
+    private List<Plan> routePlans( AlgRoot indexLookupRoot, LogicalQueryInformation logicalQueryInformation, boolean isAnalyze ) {
+        List<Plan> plans = null;
         if ( RuntimeConfig.ROUTING_PLAN_CACHING.getBoolean() && !indexLookupRoot.kind.belongsTo( Kind.DML ) ) {
             Set<Long> partitionIds = logicalQueryInformation.getAccessedPartitions().values().stream()
                     .flatMap( List::stream )
@@ -555,15 +609,12 @@ public abstract class AbstractQueryProcessor implements QueryProcessor, Executio
             return;
         }
         // Locking
-        try {
-            // Get locks for individual entities
-            EntityAccessMap accessMap = new EntityAccessMap( logicalRoot.alg, accessedPartitions );
-            // Get a shared global schema lock (only DDLs acquire an exclusive global schema lock)
 
-            LockManager.INSTANCE.lock( accessMap.getNeededLock(), statement.getTransaction() );
-        } catch ( DeadlockException e ) {
-            throw new GenericRuntimeException( e );
-        }
+        // Get locks for individual entities
+        EntityAccessMap accessMap = new EntityAccessMap( logicalRoot.alg, accessedPartitions );
+        // Get a shared global schema lock (only DDLs acquire an exclusive global schema lock)
+
+        LockManager.INSTANCE.lock( accessMap.getNeededLock(), statement.getTransaction() );
     }
 
 
@@ -576,7 +627,7 @@ public abstract class AbstractQueryProcessor implements QueryProcessor, Executio
                     RexBuilder rexBuilder = new RexBuilder( statement.getTransaction().getTypeFactory() );
                     if ( node instanceof LogicalRelModify ltm ) {
                         final Catalog catalog = Catalog.getInstance();
-                        final LogicalTable table = ltm.getEntity().unwrap( LogicalTable.class ).orElseThrow();
+                        final LogicalTable table = ltm.getEntity().unwrapOrThrow( LogicalTable.class );
                         final LogicalNamespace namespace = catalog.getSnapshot().getNamespace( table.namespaceId ).orElseThrow();
                         final List<Index> indices = IndexManager.getInstance().getIndices( namespace, table );
 
@@ -619,8 +670,8 @@ public abstract class AbstractQueryProcessor implements QueryProcessor, Executio
                                     final RexNode fieldValue = lproject.getProjects().get(
                                             lproject.getTupleType().getField( column, false, false ).getIndex()
                                     );
-                                    if ( fieldValue instanceof RexLiteral ) {
-                                        rowValues.add( ((RexLiteral) fieldValue).value );
+                                    if ( fieldValue instanceof RexLiteral rexLiteral ) {
+                                        rowValues.add( rexLiteral.value );
                                     } else if ( fieldValue instanceof RexDynamicParam ) {
                                         //
                                         // TODO: This is dynamic parameter. We need to do the index update in the generated code!
@@ -634,8 +685,8 @@ public abstract class AbstractQueryProcessor implements QueryProcessor, Executio
                                     final RexNode fieldValue = lproject.getProjects().get(
                                             lproject.getTupleType().getField( column, false, false ).getIndex()
                                     );
-                                    if ( fieldValue instanceof RexLiteral ) {
-                                        targetRowValues.add( ((RexLiteral) fieldValue).value );
+                                    if ( fieldValue instanceof RexLiteral rexLiteral ) {
+                                        targetRowValues.add( rexLiteral.value );
                                     } else if ( fieldValue instanceof RexDynamicParam ) {
                                         //
                                         // TODO: This is dynamic parameter. We need to do the index update in the generated code!
@@ -833,7 +884,7 @@ public abstract class AbstractQueryProcessor implements QueryProcessor, Executio
                     }
                     // Retrieve the catalog schema and database representations required for index lookup
                     final LogicalNamespace schema = statement.getTransaction().getDefaultNamespace();
-                    final LogicalTable ctable = scan.getEntity().unwrap( LogicalTable.class ).orElseThrow();
+                    final LogicalTable ctable = scan.getEntity().unwrapOrThrow( LogicalTable.class );
                     // Retrieve any index and use for simplification
                     final Index idx = IndexManager.getInstance().getIndex( schema, ctable, columns );
                     if ( idx == null ) {
@@ -880,17 +931,17 @@ public abstract class AbstractQueryProcessor implements QueryProcessor, Executio
             return routeGraph( logicalRoot, queryInformation, dmlRouter );
         } else if ( logicalRoot.getModel() == ModelTrait.DOCUMENT ) {
             return routeDocument( logicalRoot, queryInformation, dmlRouter );
-        } else if ( logicalRoot.alg instanceof LogicalRelModify ) {
-            AlgNode routedDml = dmlRouter.routeRelationalDml( (LogicalRelModify) logicalRoot.alg, statement );
+        } else if ( logicalRoot.alg instanceof LogicalRelModify logicalRelModify ) {
+            AlgNode routedDml = dmlRouter.routeRelationalDml( logicalRelModify, statement );
             return Lists.newArrayList( new ProposedRoutingPlanImpl( routedDml, logicalRoot, queryInformation.getQueryHash() ) );
-        } else if ( logicalRoot.alg instanceof ConditionalExecute ) {
-            AlgNode routedConditionalExecute = dmlRouter.handleConditionalExecute( logicalRoot.alg, context );
+        } else if ( logicalRoot.alg instanceof LogicalConditionalExecute logicalConditionalExecute ) {
+            AlgNode routedConditionalExecute = dmlRouter.handleConditionalExecute( logicalConditionalExecute, context );
             return Lists.newArrayList( new ProposedRoutingPlanImpl( routedConditionalExecute, logicalRoot, queryInformation.getQueryHash() ) );
-        } else if ( logicalRoot.alg instanceof BatchIterator ) {
-            AlgNode routedIterator = dmlRouter.handleBatchIterator( logicalRoot.alg, context );
+        } else if ( logicalRoot.alg instanceof LogicalBatchIterator batchIterator ) {
+            AlgNode routedIterator = dmlRouter.handleBatchIterator( batchIterator, context );
             return Lists.newArrayList( new ProposedRoutingPlanImpl( routedIterator, logicalRoot, queryInformation.getQueryHash() ) );
-        } else if ( logicalRoot.alg instanceof ConstraintEnforcer ) {
-            AlgNode routedConstraintEnforcer = dmlRouter.handleConstraintEnforcer( logicalRoot.alg, context );
+        } else if ( logicalRoot.alg instanceof LogicalConstraintEnforcer logicalConstraintEnforcer ) {
+            AlgNode routedConstraintEnforcer = dmlRouter.handleConstraintEnforcer( logicalConstraintEnforcer, context );
             return Lists.newArrayList( new ProposedRoutingPlanImpl( routedConstraintEnforcer, logicalRoot, queryInformation.getQueryHash() ) );
         } else {
             final List<ProposedRoutingPlan> proposedPlans = new ArrayList<>();
@@ -906,7 +957,7 @@ public abstract class AbstractQueryProcessor implements QueryProcessor, Executio
                             .toList();
                     proposedPlans.addAll( plans );
                 } catch ( Throwable e ) {
-                    log.warn( String.format( "Router: %s was not able to route the query.", router.getClass().getSimpleName() ) );
+                    log.warn( "Router: {} was not able to route the query.", router.getClass().getSimpleName() );
                 }
             }
 
@@ -935,8 +986,8 @@ public abstract class AbstractQueryProcessor implements QueryProcessor, Executio
 
 
     private List<ProposedRoutingPlan> routeGraph( AlgRoot logicalRoot, LogicalQueryInformation queryInformation, DmlRouter dmlRouter ) {
-        if ( logicalRoot.alg instanceof LogicalLpgModify ) {
-            AlgNode routedDml = dmlRouter.routeGraphDml( (LogicalLpgModify) logicalRoot.alg, statement, null, null );
+        if ( logicalRoot.alg instanceof LogicalLpgModify logicalLpgModify ) {
+            AlgNode routedDml = dmlRouter.routeGraphDml( logicalLpgModify, statement, null, null );
             return Lists.newArrayList( new ProposedRoutingPlanImpl( routedDml, logicalRoot, queryInformation.getQueryHash() ) );
         }
         RoutedAlgBuilder builder = RoutedAlgBuilder.create( statement, logicalRoot.alg.getCluster() );
@@ -946,8 +997,8 @@ public abstract class AbstractQueryProcessor implements QueryProcessor, Executio
 
 
     private List<ProposedRoutingPlan> routeDocument( AlgRoot logicalRoot, LogicalQueryInformation queryInformation, DmlRouter dmlRouter ) {
-        if ( logicalRoot.alg instanceof LogicalDocumentModify ) {
-            AlgNode routedDml = dmlRouter.routeDocumentDml( (LogicalDocumentModify) logicalRoot.alg, statement, null, null );
+        if ( logicalRoot.alg instanceof LogicalDocumentModify logicalDocumentModify ) {
+            AlgNode routedDml = dmlRouter.routeDocumentDml( logicalDocumentModify, statement, null, null );
             return Lists.newArrayList( new ProposedRoutingPlanImpl( routedDml, logicalRoot, queryInformation.getQueryHash() ) );
         }
         RoutedAlgBuilder builder = RoutedAlgBuilder.create( statement, logicalRoot.alg.getCluster() );
@@ -1134,8 +1185,8 @@ public abstract class AbstractQueryProcessor implements QueryProcessor, Executio
 
 
     private AlgCollation algCollation( AlgNode node ) {
-        return node instanceof Sort
-                ? ((Sort) node).collation
+        return node instanceof Sort sort
+                ? sort.collation
                 : AlgCollations.EMPTY;
     }
 
@@ -1213,99 +1264,6 @@ public abstract class AbstractQueryProcessor implements QueryProcessor, Executio
     }
 
 
-    /**
-     * Traverses all TablesScans used during execution and identifies for the corresponding table all
-     * associated partitions that needs to be accessed, on the basis of the provided partitionValues identified in a LogicalFilter
-     * <p>
-     * It is necessary to associate the partitionIds again with the ScanId and not with the table itself. Because a table could be present
-     * multiple times within one query. The aggregation per table would lead to data loss
-     *
-     * @param alg AlgNode to be processed
-     * @param aggregatedPartitionValues Mapping of Scan Ids to identified partition Values
-     * @return Mapping of Scan Ids to identified partition Ids
-     */
-    private Map<Long, List<Long>> getAccessedPartitionsPerScan( AlgNode alg, Map<Long, Set<String>> aggregatedPartitionValues ) {
-        Map<Long, List<Long>> accessedPartitions = new HashMap<>(); // tableId  -> partitionIds
-        if ( !(alg instanceof LogicalRelScan) ) {
-            for ( int i = 0; i < alg.getInputs().size(); i++ ) {
-                Map<Long, List<Long>> result = getAccessedPartitionsPerScan( alg.getInput( i ), aggregatedPartitionValues );
-                if ( !result.isEmpty() ) {
-                    for ( Map.Entry<Long, List<Long>> elem : result.entrySet() ) {
-                        accessedPartitions.merge( elem.getKey(), elem.getValue(), ( l1, l2 ) -> Stream.concat( l1.stream(), l2.stream() ).toList() );
-                    }
-                }
-            }
-        } else {
-            boolean fallback;
-            if ( alg.getEntity() != null ) {
-                Entity entity = alg.getEntity();
-
-                if ( entity == null ) {
-                    return accessedPartitions;
-                }
-
-                long scanId = entity.id;
-
-                // Get placements of this table
-                Optional<LogicalTable> optionalTable = entity.unwrap( LogicalTable.class );
-
-                if ( optionalTable.isEmpty() ) {
-                    return accessedPartitions;
-                }
-                LogicalTable table = optionalTable.get();
-
-                PartitionProperty property = Catalog.snapshot().alloc().getPartitionProperty( table.id ).orElseThrow();
-                fallback = true;
-
-                if ( aggregatedPartitionValues.containsKey( scanId ) && aggregatedPartitionValues.get( scanId ) != null && !aggregatedPartitionValues.get( scanId ).isEmpty() ) {
-                    fallback = false;
-                    List<String> partitionValues = new ArrayList<>( aggregatedPartitionValues.get( scanId ) );
-
-                    if ( log.isDebugEnabled() ) {
-                        log.debug(
-                                "TableID: {} is partitioned on column: {} - {}",
-                                table.id,
-                                property.partitionColumnId,
-                                Catalog.getInstance().getSnapshot().rel().getColumn( property.partitionColumnId ).orElseThrow().name );
-
-                    }
-                    List<Long> identifiedPartitions = new ArrayList<>();
-                    for ( String partitionValue : partitionValues ) {
-                        if ( log.isDebugEnabled() ) {
-                            log.debug( "Extracted PartitionValue: {}", partitionValue );
-                        }
-                        long identifiedPartition = PartitionManagerFactory.getInstance()
-                                .getPartitionManager( property.partitionType )
-                                .getTargetPartitionId( table, property, partitionValue );
-
-                        identifiedPartitions.add( identifiedPartition );
-                        if ( log.isDebugEnabled() ) {
-                            log.debug( "Identified PartitionId: {} for value: {}", identifiedPartition, partitionValue );
-                        }
-                    }
-
-                    accessedPartitions.merge(
-                            scanId,
-                            identifiedPartitions,
-                            ( l1, l2 ) -> Stream.concat( l1.stream(), l2.stream() ).toList() );
-                    scanPerTable.putIfAbsent( scanId, table.id );
-                    // Fallback all partitionIds are needed
-                }
-
-                if ( fallback ) {
-                    accessedPartitions.merge(
-                            scanId,
-                            property.partitionIds,
-                            ( l1, l2 ) -> Stream.concat( l1.stream(), l2.stream() ).toList() );
-                    scanPerTable.putIfAbsent( scanId, table.id );
-                }
-
-            }
-        }
-        return accessedPartitions;
-    }
-
-
     private void prepareMonitoring( Statement statement, AlgRoot logicalRoot, boolean isAnalyze, boolean isSubquery, LogicalQueryInformation queryInformation ) {
 
         // Initialize Monitoring
@@ -1339,9 +1297,9 @@ public abstract class AbstractQueryProcessor implements QueryProcessor, Executio
             }
 
             if ( RoutingManager.POST_COST_AGGREGATION_ACTIVE.getBoolean() ) {
-                if ( eventData instanceof QueryEvent ) {
+                if ( eventData instanceof QueryEvent queryEvent ) {
                     // aggregate post costs
-                    ((QueryEvent) eventData).setUpdatePostCosts( true );
+                    queryEvent.setUpdatePostCosts( true );
                 }
             }
             finalizeAccessedPartitions( eventData );
@@ -1358,26 +1316,10 @@ public abstract class AbstractQueryProcessor implements QueryProcessor, Executio
      * @param eventData monitoring data to be updated
      */
     private void finalizeAccessedPartitions( StatementEvent eventData ) {
-        Map<Long, List<Long>> partitionsInQueryInformation = eventData.getLogicalQueryInformation().getAccessedPartitions();
-        Map<Long, Set<Long>> tempAccessedPartitions = new HashMap<>();
-
-        for ( Entry<Long, List<Long>> entry : partitionsInQueryInformation.entrySet() ) {
-            long scanId = entry.getKey();
-            if ( scanPerTable.containsKey( scanId ) ) {
-                Set<Long> partitionIds = new HashSet<>( entry.getValue() );
-
-                long tableId = scanPerTable.get( scanId );
-                tempAccessedPartitions.put( tableId, partitionIds );
-
-                eventData.updateAccessedPartitions( tempAccessedPartitions );
-            }
-        }
-
         // Otherwise, Analyzer cannot correctly analyze the event anymore
         if ( eventData.getAccessedPartitions() == null ) {
-            eventData.setAccessedPartitions( Collections.emptyMap() );
+            eventData.setAccessedPartitions( Map.of() );
         }
-
     }
 
 
@@ -1417,7 +1359,8 @@ public abstract class AbstractQueryProcessor implements QueryProcessor, Executio
             if ( statement.getTransaction().isAnalyze() ) {
                 UiRoutingPageUtil.outputSingleResult(
                         proposed.plans.get( 0 ),
-                        statement.getTransaction().getQueryAnalyzer() );
+                        statement.getTransaction().getQueryAnalyzer(),
+                        statement.getIndex(), shouldAttachTextualPolyAlg() );
                 addGeneratedCodeToQueryAnalyzer( proposed.plans.get( 0 ).generatedCodes() );
             }
             return new Pair<>( proposed.plans.get( 0 ).result(), proposed.plans.get( 0 ).proposedRoutingPlan() );
@@ -1435,7 +1378,8 @@ public abstract class AbstractQueryProcessor implements QueryProcessor, Executio
 
             if ( statement.getTransaction().isAnalyze() ) {
                 AlgNode optimalNode = proposed.plans.get( index ).optimalNode();
-                UiRoutingPageUtil.addPhysicalPlanPage( optimalNode, statement.getTransaction().getQueryAnalyzer() );
+                UiRoutingPageUtil.addPhysicalPlanPage( optimalNode, statement.getTransaction().getQueryAnalyzer(),
+                        statement.getIndex(), shouldAttachTextualPolyAlg() );
                 addGeneratedCodeToQueryAnalyzer( proposed.plans.get( index ).generatedCodes() );
             }
 
@@ -1447,7 +1391,7 @@ public abstract class AbstractQueryProcessor implements QueryProcessor, Executio
     private void addGeneratedCodeToQueryAnalyzer( String code ) {
         if ( code != null ) {
             InformationManager queryAnalyzer = statement.getTransaction().getQueryAnalyzer();
-            InformationPage page = new InformationPage( "Implementation" );
+            InformationPage page = new InformationPage( "Implementation" ).setStmtLabel( statement.getIndex() );
             page.fullWidth();
             InformationGroup group = new InformationGroup( page, "Java Code" );
             queryAnalyzer.addPage( page );
@@ -1478,6 +1422,11 @@ public abstract class AbstractQueryProcessor implements QueryProcessor, Executio
                 statement );
 
         return (CachedProposedRoutingPlan) routingPlan;
+    }
+
+
+    private boolean shouldAttachTextualPolyAlg() {
+        return statement.getTransaction().getOrigin().equals( "PolyAlgParsingTest" );
     }
 
 
